# agenty_core

./: .gitignore  README.md  pyproject.toml
agenty_core/: __init__.py  _compat.py  batch_runner.py  comfyui_exec.py  paths.py
agenty_core/tools/: __init__.py  assembly_deterministic.py  batch.py  comfyui.py  file_tools.py  huggingface.py  shell.py  web_search.py  workflow_registry.py
agenty_core/utils/: comfyui_client.py  comfyui_progress.py  comfyui_retrieve_models_customnodes.py  model_node_mapping.py  progress_signal.py  secrets.py  video_frames.py  workflow_parser.py
agenty_core/workflow_recipes/: README.md  __init__.py  cli.py  intent.py  model.py  parser.py  recipe.py  roles.py  taxonomy.py
comfyui_workflow_templates_custom/templates/: Kling3_multiShot.json  NanoBanana2_outpaintUpscale.json  NanoBanana2_text_to_image.json  NanoBananaPro_3x3CharacterSheet.json  NanoBananaPro_3x3CharacterSheet_closeups.json  Wan22Vace_VID2VID.json  acescg_to_srgb.json  api_bytedance_seedream_5_0_lite_image_edit.json  api_i2i_imageEdit_OpenAi_GPT2.json  api_i2i_imageEdit_nanoBanana2.json  api_imageEdit_nano_banana2.json  api_kling_o3_flf2v.json  api_kling_o3_i2v.json  api_kling_o3_image.json  api_kling_o3_video_edit.json  api_ltxv_image_to_video.json  api_ltxv_text_to_video.json  index.json  (+36 more)
comfyui_workflow_templates_official/: image_edit.json  image_to_depth_map_lotus.json  image_to_video.json  index.json  index.schema.json  video_inpaint_wan2_1_vace.json
config/: workflow_recipes.json  workflow_recipes_node_knowledge.json  workflow_recipes_report.md  workflow_templates.json
(+6 files in other folders)
